hotové css + základ se socket.io

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                                 <span>Dev</span>
                             </div>
                             <div class="message-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus.
+                                Ahoj
                             </div>
                             <div class="message-time">
                                 23.3.
@@ -37,7 +37,7 @@
                                 <span>Uživatel</span>
                             </div>
                             <div class="message-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus.
+                                ok
                             </div>
                             <div class="message-time">
                                 23.3.
@@ -49,8 +49,8 @@
                 <form class="msg-tex">
                     <input type="text" name="msg" id="msg"
                     placeholder="Zde napiš zprávu..." autocomplete="off">
-                    <button>
-                        <i> Send</i>
+                    <button id="btn-send">
+                        <i class="fas fa-paper-plane"> Send</i>
                     </button>
 
                 </form>
@@ -58,5 +58,9 @@
         </div>
 
     </div>
+
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="aplikace.js"></script>
 </body>
 </html>
