propojování socket io a serveru

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <div class="chat-content">
                     <div class="message">
                         <div class="message-row other-message">
-                            <div class="message-title">
+                            <!--<div class="message-title">
                                 <span>Dev</span>
                             </div>
                             <div class="message-text">
@@ -30,10 +30,10 @@
                             </div>
                             <div class="message-time">
                                 23.3.
-                            </div>
+                            </div>-->
                         </div>
                         <div class="message-row you-message">
-                            <div class="message-title">
+                            <!--<div class="message-title">
                                 <span>Uživatel</span>
                             </div>
                             <div class="message-text">
@@ -41,7 +41,7 @@
                             </div>
                             <div class="message-time">
                                 23.3.
-                            </div>
+                            </div> -->
                             
                         </div>
                     </div>
