--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                     <input type="text" name="msg" id="msg"
                     placeholder="Zde napiš zprávu..." autocomplete="off">
                     <button id="btn-send">
-                        <i class="fas fa-paper-plane"> Send</i>
+                        <i class="fas fa-paper-plane"> Odeslat</i>
                     </button>
 
                 </form>
