--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <div class="logo">
                 <h3>Chat.io</h3>
             </div>
-            <p id="your-name">Vaše jméno</p>
+            <p id="your-name">Vaše jméno/přezdívka</p>
         </div>
 
         <div class="chat-section">
